Provide an entity directory service and protocol #89